@@ -11,7 +11,13 @@ package SPVM::DoubleList : precompile {
 
   sub new : SPVM::DoubleList ($array : double[]) {
     my $self = new SPVM::DoubleList;
-    my $length = @$array;
+    my $length : int;
+    if ($array) {
+      $length = @$array;
+    }
+    else {
+      $length = 0;
+    }
     
     my $capacity = 0;
     if ($length < DEFAULT_CAPACITY()) {
@@ -25,7 +31,9 @@ package SPVM::DoubleList : precompile {
     
     $self->{length} = $length;
     
-    memcpy_double($values, 0, $array, 0, $length);
+    if ($array) {
+      memcpy_double($values, 0, $array, 0, $length);
+    }
     
     $self->{values} = $values;
     
