@@ -9,7 +9,13 @@ package SPVM::StringList : precompile {
 
   sub new : SPVM::StringList ($array : string[]) {
     my $self = new SPVM::StringList;
-    my $length = @$array;
+    my $length : int;
+    if ($array) {
+      $length = @$array;
+    }
+    else {
+      $length = 0;
+    }
     
     my $capacity = 0;
     if ($length < DEFAULT_CAPACITY()) {
